[tool.poetry]
name = "coles-mobile"
version = "0.1.0"
description = ""
authors = ["bridge <wxlxy316@163.com>"]
readme = "README.md"
packages = [{include = "coles_mobile"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.1"
loguru = "^0.7.0"
autopep8 = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
